# labs_algorythm

./: data.db  data.txt  load-to-sqlite.py  parse.py  parse_all.txt  parse_group.txt
lab1/: main.cpp
lab1_sem2/: CMakeLists.txt  main.cpp
lab2/: main.cpp
lab2_sem2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab3_sem2/: CMakeLists.txt  main.cpp
lab4/: main.cpp
lab4_sem2/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
lab5_sem2/: CMakeLists.txt  main.cpp
lab6/: main.cpp
lab6_sem2/: CMakeLists.txt  main.cpp
lab7/: main.cpp
lab7_sem2/: CMakeLists.txt  main.cpp
lab8/: main.cpp
lab8_sem2/: CMakeLists.txt  main.cpp
lab9_sem2/: CMakeLists.txt  main.cpp
